# wheel-rut-detection

./: LICENSE  README.md  post_process  run_odm_split.sh
deep_learning/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
deep_learning/1_training_preprosess_bash/: burn_fasit.sh
deep_learning/1_training_preprosess_bash/ground_truth_gpkg/: balsfjord_sf_withtile.gpkg  rjukan_sf_withtile.gpkg
deep_learning/2_training_preprocess_python/: tile_and_split_train_val_test_interactive_aerial.py  tile_and_split_train_val_test_interactive_drones.py
deep_learning/3_training_python_modules/: track_zero_to_one_dataset.py
deep_learning/3_training_python_modules/from_torchvision_reference_and_modified/: train_modified.py
deep_learning/4_train/: README.md  interactive_test_pretrained_sem_seg_tracks_aerial_300_rgb.py  interactive_test_pretrained_sem_seg_tracks_drone_300_rgb.py
deep_learning/5_predict_preprocess_python/: tile_all_rgb_balsfjord_interactive_drones.py  tile_all_rgb_interactive_aerial.py  tile_all_rgb_rjukan_with_extra_split_interactive_drones.py
deep_learning/6_predict/: predict_tracks_atv_aerial_rgb_all.sh  predict_tracks_atv_drone_rgb_all.sh
drone_image_processing/: README.md  run_odm_split.sh
nibio/: README.md
nibio/0_install_stuff/: cuda_cudnn_pytorch.sh
nibio/2_training_preprocess_python/: tile_and_split_train_val_test_interactive_drones.py
nibio/4_train/: interactive_test_pretrained_sem_seg_tracks_drone_300_rgb.py
nibio/6_predict/: predict.py  (+1 more)
post_processing/: README.md  post_process  post_processing.sh
